[gd_scene load_steps=31 format=3 uid="uid://cqmremeii3qdb"]

[ext_resource type="Script" uid="uid://xjwjdskum2x5" path="res://world/generation/ChunkManager.gd" id="1_dqqhb"]
[ext_resource type="PackedScene" uid="uid://b4ydblqspmj86" path="res://entities/npc/entity/lizard/lizard.tscn" id="2_b2suy"]
[ext_resource type="PackedScene" uid="uid://7jumd521vesv" path="res://entities/npc/entity/squirrel/squirrel.tscn" id="3_h8lre"]
[ext_resource type="PackedScene" uid="uid://diysxvn1a62l2" path="res://entities/npc/entity/cobra/cobra.tscn" id="4_ysn08"]
[ext_resource type="PackedScene" uid="uid://bfb8hoqw1uj78" path="res://entities/npc/entity/crab/crab.tscn" id="5_m0cxt"]
[ext_resource type="Script" uid="uid://c5an74a255su2" path="res://entities/npc/config/NpcSpawnConfig.gd" id="6_j34ew"]
[ext_resource type="Resource" uid="uid://ddm8w714kxx14" path="res://world/config/default_world_gen_config.tres" id="7_p2iis"]
[ext_resource type="TileSet" uid="uid://c3jsf0hdthpan" path="res://assets/tile.tres" id="8_aysyn"]
[ext_resource type="Shader" uid="uid://clvg57si7cmwx" path="res://shaders/water.gdshader" id="9_o1net"]
[ext_resource type="PackedScene" uid="uid://bkfqm4yqkvtah" path="res://entities/player/player.tscn" id="10_3ljsx"]
[ext_resource type="Script" uid="uid://bri7cbbtioqux" path="res://systems/stats/stats.gd" id="11_gi7ib"]
[ext_resource type="Script" uid="uid://dyaux0urnehs2" path="res://scripts/hud/hud.gd" id="12_0pnie"]
[ext_resource type="PackedScene" uid="uid://c5wra7g07oy5d" path="res://systems/inventory/scenes/inv_gui.tscn" id="13_llyeo"]
[ext_resource type="PackedScene" uid="uid://bjovrhqha8bxh" path="res://systems/inventory/scenes/inv_hotbar.tscn" id="14_2tavo"]

[sub_resource type="Resource" id="Resource_xo05s"]
script = ExtResource("6_j34ew")
metadata/_custom_type_script = "uid://c5an74a255su2"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oo54l"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kpybi"]
noise = SubResource("FastNoiseLite_oo54l")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ctatt"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xgqkh"]
noise = SubResource("FastNoiseLite_ctatt")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_munwf"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ts3gi"]
noise = SubResource("FastNoiseLite_munwf")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0nbtd"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_37qwj"]
noise = SubResource("FastNoiseLite_0nbtd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i7141"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4mrxx"]
noise_type = 2
frequency = 0.0159
fractal_type = 3
fractal_octaves = 1
fractal_ping_pong_strength = 0.65

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7r4gi"]
noise = SubResource("FastNoiseLite_4mrxx")
seamless = true
as_normal_map = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w7kh3"]
noise_type = 2
frequency = 0.0085
fractal_type = 3
fractal_octaves = 1
fractal_ping_pong_strength = 0.545
cellular_jitter = 1.595

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e3hyu"]
noise = SubResource("FastNoiseLite_w7kh3")
seamless = true
seamless_blend_skirt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w7kh3"]
shader = ExtResource("9_o1net")
shader_parameter/distortion_noise = SubResource("NoiseTexture2D_7r4gi")
shader_parameter/fractals = SubResource("NoiseTexture2D_e3hyu")
shader_parameter/direction = Vector2(0.3, 1.425)
shader_parameter/water_color = Color(0, 0.4509804, 1, 1)
shader_parameter/fractal_color = Color(1, 1, 1, 1)
shader_parameter/scale = 152.0
shader_parameter/opacity = 0.65000000968578
shader_parameter/distortion_strength = 1.0
shader_parameter/fractal_strength = 0.7500000111759

[sub_resource type="Resource" id="Resource_dqqhb"]
resource_local_to_scene = true
script = ExtResource("11_gi7ib")
metadata/_custom_type_script = "uid://bri7cbbtioqux"

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_dqqhb")
npc_spawn_config = SubResource("Resource_xo05s")
world_config = ExtResource("7_p2iis")
player_path = NodePath("Player")
chunk_size = 13
height_noise_texture = SubResource("NoiseTexture2D_kpybi")
temperature_noise_texture = SubResource("NoiseTexture2D_xgqkh")
moisture_noise_texture = SubResource("NoiseTexture2D_ts3gi")
tree_noise_texture = SubResource("NoiseTexture2D_37qwj")

[node name="OcclusionViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
canvas_cull_mask = 4294967289
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ChunkManager" type="Node2D" parent="."]

[node name="Test" type="TileMapLayer" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_i7141")
tile_set = ExtResource("8_aysyn")

[node name="Test2" type="TileMapLayer" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_i7141")
tile_set = ExtResource("8_aysyn")

[node name="WaterLayer" type="TileMapLayer" parent="."]
visibility_layer = 2
z_as_relative = false
material = SubResource("ShaderMaterial_w7kh3")
tile_set = ExtResource("8_aysyn")

[node name="GroundLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = ExtResource("8_aysyn")

[node name="CliffLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("8_aysyn")

[node name="EnvLayer" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = ExtResource("8_aysyn")

[node name="EnvRoot" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="NpcRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="NavRoot" type="Node2D" parent="."]

[node name="Player" parent="." node_paths=PackedStringArray("hotbar") instance=ExtResource("10_3ljsx")]
hotbar = NodePath("../HUD/Hotbar")
stats = SubResource("Resource_dqqhb")

[node name="HUD" type="CanvasLayer" parent="." node_paths=PackedStringArray("inventory_gui", "player")]
script = ExtResource("12_0pnie")
inventory_gui = NodePath("InventoryGui")
player = NodePath("../Player")

[node name="InventoryGui" parent="HUD" instance=ExtResource("13_llyeo")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -188.0
offset_right = -109.64624
offset_bottom = -92.87578
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.6213622, 3.2168465)

[node name="Hotbar" parent="HUD" node_paths=PackedStringArray("inventory_gui") instance=ExtResource("14_2tavo")]
offset_left = 465.99997
offset_top = 599.00006
offset_right = -566.0
offset_bottom = -23.999939
scale = Vector2(2.2462473, 1.8793001)
inventory_gui = NodePath("../InventoryGui")

[connection signal="drop_requested" from="HUD/InventoryGui" to="Player" method="_on_inventory_gui_drop_requested"]
